Added new project to project page.
Adds another picture to image folder, and reformats page to better handle extra project.

--- a/Website/projects.html
+++ b/Website/projects.html
@@ -47,11 +47,35 @@
             </div>
 
             <div class="row">
-                <div class="col-2"></div>
-                <div class="col-8">
+                <div class="col-1"></div>
+                <div class="col-10">
                     <hr style="width: 50%, size="3", color="black">
                 </div>
-                <div class="col-2"></div>
+                <div class="col-1"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-6">
+                    <h1 class="projectRPSh1">Rock Paper Scissors</h1>
+                    <br>
+                    <img src="images/rps.png" class="projectimgRPS">
+                </div>
+                <div class="col-6">
+                    <div class="project">
+                        A website dedicated to playing Rock Paper Scissors versus the computer. For every win it will track the score.
+                        <br>
+                        <br>
+                        Responsive for only portrait mode on mobile. This was made with HTML, CSS, and JavaScript
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-10">
+                    <hr style="width: 50%, size="3", color="black">
+                </div>
+                <div class="col-1"></div>
             </div>
 
             <div class="row">
