Completely overhauled design.
Made into a singular page, along with making it more mobile responsive.

--- a/Website/index.html
+++ b/Website/index.html
@@ -11,17 +11,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="stylesheet.css">
     </head>
-    <div class="main">
+    <div class="main" id="Top">
         <body>
             <nav>
                 <div class="logo">
-                    John Lee-Cruz
+                    JL-C
                 </div>
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="about.html">About</a></li>
+                    <li class="nav-item"><a href="#AboutMe">About</a></li>
+                    <li class="nav-item"><a href="#Projects">Projects</a></li>
                     <li class="nav-item"><a href="images/LeeCruzResume.pdf">Resume</a></li>
-                    <li class="nav-item"><a href="projects.html">Projects</a></li>
                 </ul>
+                <div class="links">
+                    <a href="https://github.com/jdleecruz"><i class="fa fa-github" style="font-size:36px"></i></a>
+                    <a href="https://www.linkedin.com/in/john-lee-cruz-937277201/"><i class="fa fa-linkedin" style="font-size:36px"></i></a>
+                    <a href="mailto:jdleecruz@gmail.com"><i class="fa fa-envelope" style="font-size:36px"></i></a>
+                </div>
                 <div class="hamburger">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -29,31 +34,94 @@
                 </div>
             </nav>
 
-            <div class="row">
-                <div class="col-3"></div>
-                <div class="col-6">
-                    <div class="intro">
-                        Aspiring developer from Clarksville, Tennessee.
-                    </div>
+            <section>
+                <div class="intro-header">
+                    Hello! Welcome to my Portfolio Website.
                 </div>
-                <div class="col-3"></div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <div class="img">
-                        <img src="images/background.jpg" alt="Background" width="100%"/>
-                    </div>
+                <div class="intro-content">
+                    What I wanted to accomplish with this website was to one, display some of my HMTL/CSS/JavaScript 
+                    skills. And two, just show some of my personal projects and myself in a more interesting manner compared 
+                    to that of just a classic resume.
                 </div>
-            </div>
+            </section>
 
-            <div class="footer">
-                <p>PHONE <a href="tel:9315380109" class="phone">(931)538-0109</a></p>
-                <p>EMAIL <a href="mailto:jdleecruz@gmail.com" class="email">jdleecruz@gmail.com</a></p>
-                <p>SOCIALS <a href="https://github.com/jdleecruz" class="socials"><i class="fa fa-github" style="font-size:32px"></i></a>
-                            <a href="https://www.linkedin.com/in/john-lee-cruz-937277201/" class="socails"><i class="fa fa-linkedin" style="font-size:32px"></i></a>
+            <hr>
+            <section>
+                <div class="about-header" id="AboutMe">
+                    About Me
+                </div>
+                <div class="about-content">
+                    <img src="images/aboutimg.jpg" alt="Personal Image" class="aboutimg">
+                    <img src="images/aboutimg2.jpg" alt="Personal Image" class="aboutimg2">
+                    Hello! My name is John Lee-Cruz and I recently graduated from Austin Peay State University
+                    with a B.A. in Computer Science and a minor in Web Technology. 
+                    <br><br>
+                    Currently, I am open to opprotunities concerning software development,
+                    web development, etc. I'm a diligent worker and I'm always open to learning new ideas and concepts.
+                    <br><br>
+                    I'm a video game fanatic, as video games are what made me want to be involved with this field. But I also
+                    like watching movies/anime, playing chess, and other fun activites. 
+                </div>
+            </section>
+
+            <hr>
+            <section>
+                <div class="project-header" id="Projects">
+                    Projects
+                </div>
+                <div class="project-content">
+                    <div class="project-container-left">
+                        <div class="project-container-header">
+                            Tic-Tac-Toe
+                        </div>
+                        <img src="images/tictactoe.png" class="projectimg">
+                        <br>
+                        An android app of Tic-Tac-Toe which includes three different variants of the original game.
+                        <br><br>
+                        Languages Used:
+                        <br><br>
+                        Java
+                    </div>
+                    <div class="project-container-center">
+                        <div class="project-container-header">
+                            Tip Calculator
+                        </div>
+                        <img src="images/tip.png" class="projectimg">
+                        <br>
+                        A web app that will compute the total based on desired tip.
+                        <br><br><br>
+                        Languages Used:
+                        <br><br>
+                        HTML/CSS/JavaScript
+                    </div>
+                    <div class="project-container-right">
+                        <div class="project-container-header">
+                            Rock Paper Scissors
+                        </div>
+                        <img src="images/rps.png" class="projectimg">
+                        <br>
+                        A web app where you can play Rock Paper Scissors versus the computer.
+                        <br><br>
+                        Languages Used:
+                        <br><br>
+                        HTML/CSS/JavaScript
+                    </div>
+                    <br>
+                    All project source code can be found on my <a href="https://github.com/jdleecruz"><u>GitHub</u></a>.
+                    <br><br>
+                    <a href="#Top"><u>Back to Top</u></a>
+                </div>
+            </section>
+
+            <footer>
+                <p class="footer-content">PHONE <a href="tel:9315380109" class="footer-links">(931)538-0109</a></p>
+                <p class="footer-content">EMAIL <a href="mailto:jdleecruz@gmail.com" class="footer-links">jdleecruz@gmail.com</a></p>
+                <p class="footer-content">SOCIALS
+                    <a href="https://www.instagram.com/jdlc_21/" class="footer-links"><i class="fa fa-instagram" style="font-size: 36px;"></i></a> 
+                    <a href="https://www.linkedin.com/in/john-lee-cruz-937277201/" class="footer-links"><i class="fa fa-linkedin" style="font-size:36px"></i></a>
+                    <a href="https://github.com/jdleecruz" class="footer-links"><i class="fa fa-github" style="font-size:36px"></i></a>
                 </p>
-            </div>
+            </footer>
             <script src="nav.js"></script>
         </body>
     </div>
