Just some design changes

--- a/Website/index.html
+++ b/Website/index.html
@@ -39,9 +39,8 @@
                     Hello! Welcome to my Portfolio Website.
                 </div>
                 <div class="intro-content">
-                    What I wanted to accomplish with this website was to one, display some of my HMTL/CSS/JavaScript 
-                    skills. And two, just show some of my personal projects and myself in a more interesting manner compared 
-                    to that of just a classic resume.
+                    What I wanted to accomplish with this website was to just show some of my personal projects 
+                    and myself in a more interesting manner compared to that of just a classic resume.
                 </div>
             </section>
 
