--- a/Website/index.html
+++ b/Website/index.html
@@ -68,6 +68,7 @@
                 <div class="project-header" id="Projects">
                     Projects
                 </div>
+                <p>Project source code can be found on my <a href="https://github.com/jdleecruz"><u>GitHub</u></a>.</p>
                 <div class="project-content">
                     <div class="project-container-left">
                         <div class="project-container-header">
@@ -77,7 +78,7 @@
                         <br>
                         An android app of Tic-Tac-Toe which includes three different variants of the original game.
                         <br><br>
-                        Languages Used:
+                        <u>Languages Used</u>
                         <br><br>
                         Java
                     </div>
@@ -87,9 +88,9 @@
                         </div>
                         <img src="images/tip.png" class="projectimg">
                         <br>
-                        A web app that will compute the total based on desired tip.
-                        <br><br><br>
-                        Languages Used:
+                        A web app that will compute the subtotal based on cost and the desired tip.
+                        <br><br>
+                        <u>Languages Used</u>
                         <br><br>
                         HTML/CSS/JavaScript
                     </div>
@@ -101,12 +102,11 @@
                         <br>
                         A web app where you can play Rock Paper Scissors versus the computer.
                         <br><br>
-                        Languages Used:
+                        <u>Languages Used</u>
                         <br><br>
                         HTML/CSS/JavaScript
                     </div>
                     <br>
-                    All project source code can be found on my <a href="https://github.com/jdleecruz"><u>GitHub</u></a>.
                     <br><br>
                     <a href="#Top"><u>Back to Top</u></a>
                 </div>
