Made font and layout changes.
Increased font significantly as there was too much whitespace.

--- a/Website/index.html
+++ b/Website/index.html
@@ -39,7 +39,7 @@
                     Hello! Welcome to my Portfolio Website.
                 </div>
                 <div class="intro-content">
-                    What I wanted to accomplish with this website was to just show some of my personal projects 
+                    My goal for this website was to just show some of my personal projects 
                     and myself in a more interesting manner compared to that of just a classic resume.
                 </div>
             </section>
@@ -76,7 +76,7 @@
                         </div>
                         <img src="images/tictactoe.png" class="projectimg">
                         <br>
-                        An android app of Tic-Tac-Toe which includes three different variants of the original game.
+                        An android app of Tic-Tac-Toe which includes three variants of the original game.
                         <br><br>
                         <u>Languages Used</u>
                         <br><br>
@@ -88,7 +88,7 @@
                         </div>
                         <img src="images/tip.png" class="projectimg">
                         <br>
-                        A web app that will compute the subtotal based on cost and the desired tip.
+                        A web app that will compute the subtotal based on cost and the desired tip and display those results.
                         <br><br>
                         <u>Languages Used</u>
                         <br><br>
@@ -100,7 +100,7 @@
                         </div>
                         <img src="images/rps.png" class="projectimg">
                         <br>
-                        A web app where you can play Rock Paper Scissors versus the computer.
+                        A web app where you can play Rock Paper Scissors versus the computer that will track the score.
                         <br><br>
                         <u>Languages Used</u>
                         <br><br>
