Added a greyout effect in nav.js
The hamburger button along with the nav will now follow throughout the webpage
When clicking on the hamburger button the page will now 'grey out' until the hamburger button is clicked again or one of the links are clicked.

--- a/Website/index.html
+++ b/Website/index.html
@@ -13,6 +13,7 @@
     </head>
     <div class="main" id="Top">
         <body>
+            <div id="greyout"></div>
             <nav>
                 <div class="logo">
                     JL-C
