Added hamburger button animation
Fixed where if user was in desktop mode, clicking a link would activate the greyout effect.

--- a/Website/index.html
+++ b/Website/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="about-content">
                     <img src="images/aboutimg.jpg" alt="Personal Image" class="aboutimg">
-                    <img src="images/aboutimg2.jpg" alt="Personal Image" class="aboutimg2">
+                    <img src="images/aboutimg2.jpg" alt="Personal Image2" class="aboutimg2">
                     Hello! My name is John Lee-Cruz and I recently graduated from Austin Peay State University
                     with a B.A. in Computer Science and a minor in Web Technology. 
                     <br><br>
